name:                cyclo-complex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cyclo-complex#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Hobbs
maintainer:          dhobbs@tcd.ie
copyright:           wut
category:            assignment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, SuperHelper5000
                     , PrimeFactors
  build-depends:       base >= 4.7 && < 5
                     , network-transport-tcp
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , argon
                     , github
                     , process
                     , aeson
  default-language:    Haskell2010

executable cyclo-complex-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cyclo-complex
  default-language:    Haskell2010

test-suite cyclo-complex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cyclo-complex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cyclo-complex
